buf fix
