# cmd/atm/main.go
@@ -21,6 +21,8 @@ func main() {
 
 	router := gin.Default()
 
+	router.Use(corsMiddleware())
+
 	conf, err := config.NewConfig(logger)
 	if err != nil {
 		logger.Fatalf("Error conf reading: %v", err)
@@ -49,4 +51,24 @@ func main() {
 	app.RunApi()
 
 	// api.StartServer()
+}
+
+
+func corsMiddleware() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		origin := c.Request.Header.Get("Origin")
+		if origin != "" {
+			c.Writer.Header().Set("Access-Control-Allow-Origin", origin)
+			c.Writer.Header().Set("Access-Control-Allow-Methods", "GET, POST, PUT, PATCH, DELETE, OPTIONS")
+			c.Writer.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")
+			c.Writer.Header().Set("Access-Control-Allow-Credentials", "true")
+
+			if c.Request.Method == "OPTIONS" {
+				c.AbortWithStatus(204)
+				return
+			}
+		}
+
+		c.Next()
+	}
 }
